fixing some spacing

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  padding: 1em 2em;
+  padding: .5em 2em;
   align-items: center;
   justify-content: space-between;
 }
@@ -41,12 +41,8 @@ footer {
   display: flex;
 }
 
-.w-45 {
-  width: 45%;
-}
-
-.w-55 {
-  width: 55%;
+.w-50 {
+  width: 50%;
 }
 
 .w-100 {
